# ugly-duckling-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
data/: device-config.json
src/: config.rs  macros.rs  main.rs  network.rs
src/kernel/: command.rs  console.rs  mdns.rs  mod.rs  mqtt.rs  network.rs  rtc.rs  wifi.rs
