[package]
name = "ugly-duckling-rs"
version = "0.0.0"                                     # version is taken from Git
authors = ["Lóránt Pintér <lorant.pinter@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.80"

[[bin]]
name = "ugly-duckling-rs"
harness = false           # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1"
embedded-hal-async = "1"
embedded-svc = "0.28"
esp-idf-hal = "0.44"
esp-idf-svc = "0.49"
esp-idf-sys = "0.35"
embassy-executor = { version = "0.6", features = [
    "arch-std",
    "executor-thread",
    "log",
] }
static_cell = "2"

[build-dependencies]
embuild = "0.32"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.3" }
